// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratingScreen T-0011-240: snapshot — generating state (thinking): generating-thinking 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        aria-hidden={false}
        collapsable={false}
        fullScreenSwipeShadowEnabled={true}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        hasLargeHeader={false}
        nativeBackButtonDismissalEnabled={false}
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onGestureCancel={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onHeaderHeightChange={[Function]}
        onNativeDismissCancelled={[Function]}
        onSheetDetentChanged={[Function]}
        onTransitionProgress={[Function]}
        onWillAppear={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        scrollEdgeEffects={
          {
            "bottom": "automatic",
            "left": "automatic",
            "right": "automatic",
            "top": "automatic",
          }
        }
        sheetAllowedDetents={
          [
            1,
          ]
        }
        sheetCornerRadius={-1}
        sheetDefaultResizeAnimationEnabled={true}
        sheetElevation={24}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetInitialDetent={0}
        sheetInitialDetentIndex={0}
        sheetLargestUndimmedDetent={-1}
        sheetLargestUndimmedDetentIndex={-1}
        sheetShouldOverflowTopInset={false}
        shouldFreeze={false}
        stackPresentation="push"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenContentWrapper
          collapsable={false}
          style={
            [
              {
                "flex": 1,
              },
              [
                {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#FAFAF7",
                  "flex": 1,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "gap": 24,
                  "justifyContent": "center",
                  "paddingHorizontal": 32,
                }
              }
              testID="generating-screen-root"
            >
              <Text
                accessibilityRole="header"
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#14171A",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "lineHeight": 24,
                    },
                  ]
                }
                testID="generating-headline"
              >
                Building your tool…
              </Text>
              <View
                style={
                  {
                    "width": "100%",
                  }
                }
              >
                <View
                  accessibilityLabel="Generation progress"
                  accessibilityRole="progressbar"
                  accessibilityValue={
                    {
                      "max": 100,
                      "min": 0,
                    }
                  }
                  style={
                    [
                      {
                        "borderRadius": 2,
                        "borderWidth": 0.5,
                        "height": 4,
                        "overflow": "hidden",
                      },
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#ECEEF1",
                      },
                    ]
                  }
                  testID="progress-bar-track"
                >
                  <View
                    style={
                      [
                        {
                          "borderRadius": 2,
                          "height": "100%",
                        },
                        {
                          "backgroundColor": "#4F46E5",
                        },
                        {
                          "width": "0%",
                        },
                      ]
                    }
                    testID="progress-bar-fill"
                  />
                </View>
              </View>
              <Text
                accessibilityLiveRegion="polite"
                style={
                  [
                    {
                      "marginTop": 12,
                      "textAlign": "center",
                    },
                    {
                      "color": "#5C6470",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 24,
                    },
                  ]
                }
                testID="message-cycler"
              >
                Sketching the layout…
              </Text>
              <View
                accessibilityLabel="Cancel"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "marginTop": 8,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  }
                }
                testID="generating-cancel-button"
              >
                <Text
                  style={
                    {
                      "color": "#5C6470",
                      "fontSize": 16,
                    }
                  }
                >
                  Cancel
                </Text>
              </View>
            </View>
          </View>
        </RNSScreenContentWrapper>
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backTitleFontFamily="System"
          backTitleVisible={true}
          backgroundColor="rgb(255, 255, 255)"
          color="rgb(0, 122, 255)"
          direction="ltr"
          disableBackButtonMenu={false}
          experimental_userInterfaceStyle="light"
          hidden={true}
          hideBackButton={false}
          largeTitleFontFamily="System"
          largeTitleFontWeight="700"
          largeTitleHideShadow={false}
          pointerEvents="box-none"
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "position": "absolute",
              "top": "-100%",
              "width": "100%",
            }
          }
          title="Generating"
          titleColor="rgb(28, 28, 30)"
          titleFontFamily="System"
          titleFontWeight="600"
          topInsetEnabled={false}
          translucent={false}
        />
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;

exports[`GeneratingScreen T-0011-240: snapshot — stalled state: generating-stalled 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        aria-hidden={false}
        collapsable={false}
        fullScreenSwipeShadowEnabled={true}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        hasLargeHeader={false}
        nativeBackButtonDismissalEnabled={false}
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onGestureCancel={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onHeaderHeightChange={[Function]}
        onNativeDismissCancelled={[Function]}
        onSheetDetentChanged={[Function]}
        onTransitionProgress={[Function]}
        onWillAppear={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        scrollEdgeEffects={
          {
            "bottom": "automatic",
            "left": "automatic",
            "right": "automatic",
            "top": "automatic",
          }
        }
        sheetAllowedDetents={
          [
            1,
          ]
        }
        sheetCornerRadius={-1}
        sheetDefaultResizeAnimationEnabled={true}
        sheetElevation={24}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetInitialDetent={0}
        sheetInitialDetentIndex={0}
        sheetLargestUndimmedDetent={-1}
        sheetLargestUndimmedDetentIndex={-1}
        sheetShouldOverflowTopInset={false}
        shouldFreeze={false}
        stackPresentation="push"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenContentWrapper
          collapsable={false}
          style={
            [
              {
                "flex": 1,
              },
              [
                {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#FAFAF7",
                  "flex": 1,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "gap": 24,
                  "justifyContent": "center",
                  "paddingHorizontal": 32,
                }
              }
              testID="generating-screen-root"
            >
              <Text
                accessibilityRole="header"
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#14171A",
                      "fontSize": 18,
                      "fontWeight": "600",
                      "lineHeight": 24,
                    },
                  ]
                }
                testID="generating-headline"
              >
                Building your tool…
              </Text>
              <View
                style={
                  {
                    "width": "100%",
                  }
                }
              >
                <View
                  accessibilityLabel="Generation progress"
                  accessibilityRole="progressbar"
                  accessibilityValue={
                    {
                      "max": 100,
                      "min": 0,
                    }
                  }
                  style={
                    [
                      {
                        "borderRadius": 2,
                        "borderWidth": 0.5,
                        "height": 4,
                        "overflow": "hidden",
                      },
                      {
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#ECEEF1",
                      },
                    ]
                  }
                  testID="progress-bar-track"
                >
                  <View
                    style={
                      [
                        {
                          "borderRadius": 2,
                          "height": "100%",
                        },
                        {
                          "backgroundColor": "#4F46E5",
                        },
                        {
                          "width": "0%",
                        },
                      ]
                    }
                    testID="progress-bar-fill"
                  />
                </View>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "gap": 16,
                  }
                }
              >
                <Text
                  accessibilityLiveRegion="polite"
                  style={
                    [
                      {
                        "color": "#5C6470",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 24,
                        "textAlign": "center",
                      },
                    ]
                  }
                  testID="generating-stalled-message"
                >
                  Waiting for connection…
                </Text>
                <View
                  accessibilityLabel="Cancel and retry"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "borderRadius": 8,
                        "borderWidth": 0.5,
                        "paddingHorizontal": 20,
                        "paddingVertical": 10,
                      },
                      {
                        "borderColor": "#4F46E5",
                      },
                    ]
                  }
                  testID="cancel-and-retry-button"
                >
                  <Text
                    style={
                      {
                        "color": "#4F46E5",
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    Cancel and retry
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </RNSScreenContentWrapper>
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backTitleFontFamily="System"
          backTitleVisible={true}
          backgroundColor="rgb(255, 255, 255)"
          color="rgb(0, 122, 255)"
          direction="ltr"
          disableBackButtonMenu={false}
          experimental_userInterfaceStyle="light"
          hidden={true}
          hideBackButton={false}
          largeTitleFontFamily="System"
          largeTitleFontWeight="700"
          largeTitleHideShadow={false}
          pointerEvents="box-none"
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "position": "absolute",
              "top": "-100%",
              "width": "100%",
            }
          }
          title="Generating"
          titleColor="rgb(28, 28, 30)"
          titleFontFamily="System"
          titleFontWeight="600"
          topInsetEnabled={false}
          translucent={false}
        />
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;
